--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,8 +3,8 @@
 <%= link_to "sample app", '#', id: "logo" %>
 <nav>
 <ul class = "nav navbar-nav pull-right">
-<li><%= link_to "Home", "#" %></li>
-<li><%= link_to "Help", "#" %></li>
+<li><%= link_to "Home", "http://www.railstutorial.org/" %></li>
+<li><%= link_to "Help", "http://www.railstutorial.org/help" %></li>
 <li><%= link_to "Log in", "#" %></li>
 </ul>
 </nav>
