--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,7 +1,7 @@
 <h1>Help</h1>
 <p>
   Get help on the Ruby on Rails Tutorial at the
-  <a href="http://www.railstutorial.org/#help">Rails Tutorial help section</a>
+  <a href="http://www.railstutorial.org/help">Rails Tutorial help section</a>
   <a href="http://www.railstutorial.org/book"><em>Rails on Rails Tutorial</em>
   book</a>
 </p>
